--- a/src/components/footer/footerLink.css
+++ b/src/components/footer/footerLink.css
@@ -1,20 +1,20 @@
 .footerLink {
-    width: 100%;
+    width: max-content;
     padding: 8px 16px;
     display: flex;
     align-items: center;
-    justify-content: space-between;
-    gap: 14px;
+    justify-content: start;
+    gap: 12px;
     cursor: pointer;
 }
 
 .footerLink-text {
     color: var(--white-100);
-    font-size: var(--font-1);
-    font-weight: 500;
+    font-size: var(--font--2);
+    font-weight: 400;
 }
 
 .footerLink-svg {
-    width: 12px;
+    width: 8px;
     align-self: end;
 }
