--- a/src/App.css
+++ b/src/App.css
@@ -12,6 +12,10 @@ body {
     padding: 16px;
 }
 
+::-webkit-scrollbar{
+    display: none;
+}
+
 a {
     color: inherit;
     text-decoration: none;
