--- a/src/cards/home/movieCard2.css
+++ b/src/cards/home/movieCard2.css
@@ -1,6 +1,7 @@
-.heroMovieCard {
-    width: 321px;
-    height: 184px;
+.heroCard {
+    width: 100%;
+    max-width: 500px;
+    aspect-ratio: 16/9;
     padding: 16px;
     position: relative;
     overflow: hidden;
@@ -10,7 +11,7 @@
     justify-content: center;
 }
 
-.heroMovieCard-img {
+.heroCard-img {
     width: 100%;
     height: 100%;
     position: absolute;
@@ -22,16 +23,16 @@
     width: 100%;
     height: 100%;
     position: absolute;
-    background: linear-gradient(180deg, rgba(0, 0, 0, 0.55) 0%, rgba(0, 0, 0, 0.9) 100%);
+    background: linear-gradient(180deg, rgba(0, 0, 0, 0.4) 0%, rgba(0, 0, 0, 0.65) 100%);
 }
 
-.heroMovieCard-img img{
+.heroCard-img img {
     width: 100%;
     height: 100%;
     object-fit: cover;
 }
 
-.heroMovieCard-content {
+.heroCard-content {
     width: 100%;
     height: 100%;
     display: flex;
@@ -40,14 +41,14 @@
     gap: 16px;
 }
 
-.heroMovieCard-content-img {
-    width: 94px;
+.heroCard-content-img {
+    width: 35%;
     height: 100%;
     object-fit: cover;
     border-radius: var(--border-radius-4);
 }
 
-.heroMovieCard-content-details {
+.heroCard-content-details {
     flex: 1;
     height: 100%;
     display: flex;
