--- a/src/cards/home/slider.css
+++ b/src/cards/home/slider.css
@@ -1,6 +1,6 @@
 .slider {
     width: 100%;
-    height: auto;
+    aspect-ratio: 1.85/1;
     display: flex;
     align-items: end;
     justify-content: center;
@@ -8,10 +8,8 @@
 }
 
 .slider_img {
-    width: 100%;
-    height: 100%;
     position: absolute;
-    object-fit: cover;
+    inset: 0 0 0 0;
     z-index: -1;
 }
 
@@ -19,8 +17,8 @@
     width: 100%;
     height: 100%;
     position: absolute;
-    object-fit: cover;
-    filter: blur(300px) brightness(0.7) contrast(1.5);
+    inset: 0 0 0 0;
+    filter: blur(500px) brightness(0.7) contrast(1.5);
 }
 
 .slider_img-img {
@@ -29,46 +27,98 @@
     position: absolute;
     inset: 0 0 0 0;
     object-fit: cover;
-    filter: brightness(0.7);
+    filter: brightness(0.8);
 }
 
 .slider_content {
     width: 100%;
-    height: 70%;
-    padding: 36px;
+    height: 80%;
+    padding-inline: 32px;
+    padding-bottom: 16px;
     display: flex;
     align-items: end;
-    justify-content: space-between;
+    justify-content: start;
     gap: 36px;
 }
 
 .moviePoster {
-    width: 40%;
+    height: 100%;
+    aspect-ratio: 2/3;
+    object-fit: cover;
+    border-radius: var(--border-radius-8);
+}
+
+.moviePoster img {
+    width: 100%;
     height: 100%;
     object-fit: cover;
     border-radius: var(--border-radius-8);
 }
 
 .slider_content-details {
+    width: 100%;
+    max-width: 900px;
+    height: max-content;
     flex: 1;
     display: flex;
     gap: 16px;
-    align-items: stretch;
+    align-items: start;
 }
-
 
 .slider_content-details-text {
     display: flex;
     flex-direction: column;
 }
 
-.slider_content-details-text h2{
-    font-size: var(--font-4);
+.slider_content-details-text h2 {
+    font-size: var(--font-5);
     font-weight: 700;
+    overflow-wrap: break-word;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
-.slider_content-details-text p{
-    font-size: var(--font--2);
+.slider_content-details-text p {
+    font-size: var(--font--1);
     font-weight: 400;
     color: var(--white-200);
 }
+
+/*Media Queries*/
+
+/* Laptops */
+@media screen and (max-width: 1279px) {}
+
+/* Tablets */
+@media screen and (max-width: 768px) {
+    .slider_content {
+        padding-inline: 16px;
+        gap: 16px;
+    }
+
+    .slider_content-details-text h2 {
+        font-size: var(--font-3);
+    }
+
+    .playButton {
+        width: 40px !important;
+        height: 40px !important;
+    }
+}
+
+/* Mobiles */
+@media screen and (max-width: 480px) {
+    .slider_content-details-text h2 {
+        font-size: var(--font-1);
+    }
+
+    .slider_content-details-text p {
+        font-size: var(--font--3);
+    }
+}
+
+/* 4k - Monitors */
+@media screen and (min-width: 1700px) {}
