--- a/src/containers/home/heroSlider.css
+++ b/src/containers/home/heroSlider.css
@@ -1,4 +1,4 @@
-.heroSlider{
+.heroSlider {
     width: 100%;
     height: 100%;
     display: flex;
@@ -7,43 +7,22 @@
     position: relative;
 }
 
-.slider-item {
-    min-width: 100%;
-    transition: opacity 0.5s ease-in-out;
-}
-
-.slider-item.active {
-    opacity: 1;
-}
-
 .slider-navigation {
+    width: max-content;
     position: absolute;
-    top: 50%;
-    width: 100%;
+    bottom: 30%;
+    right: 2%;
     display: flex;
-    justify-content: space-between;
+    gap: 32px;
     align-items: center;
     transform: translateY(-50%);
-}
-
-.slider-navigation button {
-    background-color: rgba(0, 0, 0, 0.5);
-    color: white;
-    border: none;
-    padding: 16px;
-    cursor: pointer;
-    transition: background-color 0.3s ease;
-}
-
-.slider-navigation button:hover {
-    background-color: rgba(0, 0, 0, 0.8);
 }
 
 .slider-indicators {
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 8px;
+    gap: 12px;
 }
 
 .indicator {
@@ -57,4 +36,60 @@
 
 .indicator.active {
     background-color: rgba(255, 255, 255, 1);
+}
+
+
+
+
+/*Media Queries*/
+
+/* Laptops */
+@media screen and (max-width: 1279px) {}
+
+/* Tablets */
+@media screen and (max-width: 768px) {
+    .navigatingButtons {
+        gap: 6px;
+    }
+
+    .navigatingButton {
+        width: 20px;
+    }
+    .slider-navigation{
+        gap: 16px;
+    }
+    .slider-indicators{
+        gap: 6px;
+    }
+    .indicator{
+        width: 6px;
+        height: 6px;
+    }}
+
+/* Mobiles */
+@media screen and (max-width: 480px) {
+    .navigatingButtons {
+        gap: 6px;
+    }
+
+    .navigatingButton {
+        width: 20px;
+    }
+    .slider-navigation{
+        gap: 16px;
+    }
+    .slider-indicators{
+        gap: 6px;
+    }
+    .indicator{
+        width: 6px;
+        height: 6px;
+    }
+}
+
+/* 4k - Monitors */
+@media screen and (min-width: 1700px) {
+    .slider-navigation{
+        bottom: 5%;
+    }
 }
