--- a/src/containers/home/trendingCards.css
+++ b/src/containers/home/trendingCards.css
@@ -1,28 +1,40 @@
-.trendingCards{
+.trendingCards {
     width: 100%;
     height: 100%;
     display: flex;
     flex-direction: column;
-    gap: 16px;
+    gap: 32px;
 }
 
-.trendingCards_nav{
+.trendingCards_nav {
     width: 100%;
     display: flex;
     align-items: center;
     justify-content: space-between;
 }
 
-.trendingCards_nav h4{
+.trendingCards_nav h4 {
     font-size: var(--font-2);
     font-weight: 700;
 }
 
-.movies-list{
+.movies-list {
     width: 100%;
+    height: 100%;
+    flex: 1;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
     gap: 16px;
+}
+
+
+/* Laptops */
+@media screen and (max-width: 1279px) {
+
+    .trendingCards {
+        gap: 16px;
+    }
+
 }
