--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -20,6 +20,43 @@
     width: 40%;
 }
 
+.home_section2 {
+    width: 100%;
+    height: max-content;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 32px;
+}
+
+.home_section2-div {
+    width: 100%;
+    height: 1000px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 64px;
+    overflow: hidden;
+    position: relative;
+}
+
+.home_section2-div::after{
+    content: "";
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, var(--black-700) 100%);
+    position: absolute;
+    z-index: 1;
+}
+
+.home_section2-div .secondaryButton{
+    position: absolute;
+    bottom: 32px;
+    z-index: 2;
+}
+
 
 /*Media Queries*/
 
