--- a/src/components/cast/cast.css
+++ b/src/components/cast/cast.css
@@ -1,5 +1,5 @@
 .castImage{
-    width: 160px;
+    min-width: 160px;
     height: 174px;
     border-radius: var(--border-radius-4);
     overflow: hidden;
