--- a/src/containers/feed/photoSlider.css
+++ b/src/containers/feed/photoSlider.css
@@ -1,24 +1,24 @@
-.movieLists1{
+.photoSlider{
     width: 100%;
     display: flex;
     flex-direction: column;
-    align-items: start;
+    align-items: center;
     justify-content: space-between;
     gap: 16px;
 }
-.movieLists1-nav{
+.photoSlider-nav{
     width: 100%;
     display: flex;
     align-items: center;
     justify-content: space-between;
 }
 
-.movieLists1-nav h4{
+.photoSlider-nav h4{
     font-size: var(--font-2);
     font-weight: 700;
 }
 
-.movieLists1-list{
+.photoSlider-list{
     width: 100%;
     height: max-content;
     overflow: hidden;
