--- a/src/containers/feed/movieLists2.css
+++ b/src/containers/feed/movieLists2.css
@@ -3,7 +3,7 @@
     height: 100%;
     display: flex;
     flex-direction: column;
-    align-items: stretch;
+    align-items: start;
     justify-content: start;
     gap: 32px;
     padding: 32px 0;
@@ -11,10 +11,13 @@
 
 .movieLists2-nav {
     width: 100%;
+    height: 100%;
     text-align: center;
 }
 
 .movieLists2-nav h1 {
+    width: 100%;
+    height: max-content;
     font-size: var(--font-6);
     font-size: 15vw;
     color: rgb(52, 52, 52);
@@ -24,7 +27,10 @@
 }
 
 .movieLists2-nav h4 {
-    font-size: var(--font-2);
+    width: 100%;
+    text-align: start   ;
+    height: max-content;
+    font-size: var(--font-4);
     font-weight: 700;
 }
 
@@ -47,7 +53,7 @@
     }
 
     .movieLists2-nav h1 {
-        margin-bottom: -70px;
+        margin-bottom: -60px;
     }
 
 }
