--- a/src/pages/explore/explore.css
+++ b/src/pages/explore/explore.css
@@ -1,4 +1,4 @@
-.explore{
+.explore {
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -7,7 +7,7 @@
     gap: 32px;
 }
 
-.explore-nav{
+.explore-nav {
     width: 100%;
     display: flex;
     align-items: center;
@@ -16,7 +16,7 @@
     overflow: scroll;
 }
 
-.explore-nav>p{
+.explore-nav>p {
     width: max-content;
     white-space: nowrap;
     padding: 8px 16px;
@@ -28,8 +28,38 @@
     border-radius: 16px;
 }
 
-
-.explore-div{
+.explore-movies{
     width: 100%;
-    
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 32px;
+}
+
+.explore-div {
+    width: 100%;
+    height: 1000px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 64px;
+    overflow: hidden;
+    position: relative;
+}
+
+.explore-div::after {
+    content: "";
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, var(--black-700) 100%);
+    position: absolute;
+    z-index: 1;
+}
+
+.explore-div .secondaryButton {
+    position: absolute;
+    bottom: 32px;
+    z-index: 2;
 }
