--- a/src/cards/home/movieCard.css
+++ b/src/cards/home/movieCard.css
@@ -17,8 +17,10 @@
 }
 
 .movieCard-details {
+    flex: 1;
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
     gap: 8px;
 }
 
@@ -50,20 +52,17 @@
 /* Media Queries */
 
 /* Mobile */
-@media only screen and (max-width: 480px) {
-    
-}
+@media only screen and (max-width: 480px) {}
+
 /* Tablet */
 @media only screen and (max-width: 768px) {
-    .movieCard{
+    .movieCard {
         min-width: 180px;
     }
 }
+
 /* Laptops */
-@media only screen and (max-width: 1279px) {
-    
-}
+@media only screen and (max-width: 1279px) {}
+
 /* Large Desktops and Monitors */
-@media only screen and (min-width: 1280px) {
-    
-}
+@media only screen and (min-width: 1280px) {}
