--- a/src/containers/feed/movieLists1.css
+++ b/src/containers/feed/movieLists1.css
@@ -1,26 +1,28 @@
-.movieLists1{
+.movieLists1 {
     width: 100%;
+    height: 100%;
     display: flex;
     flex-direction: column;
     align-items: start;
     justify-content: space-between;
     gap: 16px;
 }
-.movieLists1-nav{
+
+.movieLists1-nav {
     width: 100%;
     display: flex;
     align-items: center;
     justify-content: space-between;
 }
 
-.movieLists1-nav h4{
+.movieLists1-nav h4 {
     font-size: var(--font-2);
     font-weight: 700;
 }
 
-.movieLists1-list{
+.movieLists1-list {
     width: 100%;
-    height: max-content;
+    height: 100%;
     overflow: hidden;
     overflow-x: scroll;
     display: flex;
