--- a/src/containers/footer/footer.css
+++ b/src/containers/footer/footer.css
@@ -1,11 +1,12 @@
 .footer{
     width: 100%;
     height: max-content;
+    margin-top: 80px;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    gap: 32px;
+    gap: 40px;
 }
 
 .footer_content{
