--- a/src/pages/moviesPage/moviesPage.css
+++ b/src/pages/moviesPage/moviesPage.css
@@ -83,26 +83,27 @@ h3 {
     flex-direction: column;
     align-items: start;
     justify-content: space-between;
-    gap: 32px;
+    gap: 16px;
 }
 
-.content_div{
+.content_div {
     width: 100%;
     height: max-content;
-    display: flex;;
+    display: flex;
+    ;
     align-items: baseline;
     justify-content: start;
     gap: 16px;
 }
 
-.content_div-title{
+.content_div-title {
     min-width: 180px;
     color: white;
     font-size: var(--font-1);
     font-weight: 500;
 }
 
-.content_div-details{
+.content_div-details {
     color: var(--white-200);
     font-size: var(--font--1);
     font-weight: 400;
@@ -113,30 +114,6 @@ h3 {
 .castSection {
     width: 100%;
     height: 100%;
-}
-
-/* Details Section */
-
-.detailsSection {
-    width: 100%;
-}
-
-.detailsSection-context {
-    margin-top: 16px;
-    display: flex;
-    align-items: start;
-    justify-content: start;
-    gap: 16px;
-}
-
-.detailsSection-title,
-.detailsSection-content {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: start;
-    justify-content: start;
-    gap: 32px;
 }
 
 /* Similar Section */
@@ -156,6 +133,11 @@ h3 {
     .summary-poster {
         display: none;
     }
+
+    .content_div-title {
+        font-size: var(--font-0);
+    }
+
 }
 
 /* Mobiles */
